--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -8,19 +8,27 @@
     <h3> {{group.description|safe}} </h3><br>
     <h3> Members count : {{group.members.is_accepted.count}}</h3><br>
 
-    {% if user in group.members.all and group.members.is_accepted == 1 %}
+    {{ group.joined_request}}
+    {{ group.joined_request.user_id }}
+    {{ request.user.id }}
+    {{ group.joined_request.group_id }}
+    {{ group.id }}
+
+    {{ context }}
+
+    {% if group.joined_request.user_id == request.user.id and group.joined_request.is_accepted == True %}
 
     <a href="{% url 'groups:leave' slug=group.slug %}" class="btn btn-lg btn-danger" id="jl"><span
             class="fas fa-sign-out-alt"></span>Leave</a>
 
-    {% elif user in group.members.all and group.members.is_accepted == O %}
+    {% elif group.rejected_request.user_id == request.user.id and group.rejected_request.is_accepted == False %}
+    <a href="{% url 'groups:join' slug=group.slug %}" class="btn btn-lg btn-success" id="jl"><span
+            class="icon-ok-circle"></span>Join</a>
 
+
+    {% else %}
     <a href="{% url 'groups:join' slug=group.slug %}" class="btn btn-lg btn-primary" id="jl"><span
             class="icon-ok-circle"></span>Pending</a>
-    
-    {% else %}   
-    <a href="{% url 'groups:join' slug=group.slug %}" class="btn btn-lg btn-success" id="jl"><span
-        class="icon-ok-circle"></span>Join</a>
     {% endif %}
     <br>
 </div>
@@ -29,56 +37,56 @@
 {% block group_content%}
 <div class="col-md-8">
     <br>
-   
+
     <h1> Posts:</h1>
-    
+
     {% if not group.posts.count %}
-        <h2> No posts yet</h2>
+    <h2> No posts yet</h2>
     {% endif %}
 
     {% if request.user == group.created_by %}
     <table class="table" style="font-size: 18px">
         <thead class="thead-dark">
-          <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Actions</th>
-          </tr>
+            <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Actions</th>
+            </tr>
         </thead>
         <tbody>
-              {% for member in group.join_requests %}
+            {% for member in group.join_requests %}
 
-                  <tr>
-                      <td scope="row">
-                          <a href="{% url 'groups:single' slug=group.slug%}" style="color: #000; font-weight: bold">
-                              <span class="badge badge-danger px-3 py-2">{{member.user}}</span>
-                          </a>
-                      </td>
-                      <td>
-                        
-                        <form action='{% url "groups:join" slug=group.slug %}' method="GET">
-                            {% csrf_token %}
-                            <input type="hidden" name="user_id" value={{member}}>
-                            <input type="hidden" name="group_id" value={{group}}>
-                            <button type="submit" style="color: #000; font-weight: bold">
-                                <span class="badge badge-danger px-3 py-2">Accept</span>
-                            </button>
-                        </form>
+            <tr>
+                <td scope="row">
+                    <a href="{% url 'groups:single' slug=group.slug%}" style="color: #000; font-weight: bold">
+                        <span class="badge badge-danger px-3 py-2">{{member.user}}</span>
+                    </a>
+                </td>
+                <td>
 
-                        <form action='{% url "groups:leave" slug=group.slug %}' method="GET">
-                            {% csrf_token %}
-                            <input type="hidden" name="user_id" value={{member.id}}>
-                            <input type="hidden" name="group_id" value={{group.id}}>
-                            <button type="submit" style="color: #000; font-weight: bold">
-                                    <span class="badge badge-danger px-3 py-2">Reject</span>
-                            </button>
-                        </form>
+                    <form action='{% url "groups:accept-member" %}' method="GET">
+                        {% csrf_token %}
+                        <input type="hidden" name="user_id" value={{member.user.id}}>
+                        <input type="hidden" name="group_id" value={{group.id}}>
+                        <button type="submit" style="color: #000; font-weight: bold">
+                            <span class="badge badge-danger px-3 py-2">Accept</span>
+                        </button>
+                    </form>
 
-                      </td>
-                  </tr>
-              {% endfor %}
+                    <form action='{% url "groups:reject-member" %}' method="GET">
+                        {% csrf_token %}
+                        <input type="hidden" name="user_id" value={{member.user.id}}>
+                        <input type="hidden" name="group_id" value={{group.id}}>
+                        <button type="submit" style="color: #000; font-weight: bold">
+                            <span class="badge badge-danger px-3 py-2">Reject</span>
+                        </button>
+                    </form>
+
+                </td>
+            </tr>
+            {% endfor %}
         </tbody>
-      </table>
-      {% endif %}
+    </table>
+    {% endif %}
 </div>
 
 {% endblock%}
